# siggen

./: .gitmodules  CMakeLists.txt  README.md
imgraph/: imgraph.cpp  imgraph.h
src/: def.h  display_context.cpp  display_context.h  global.h  main.cpp
src/modules/: module.h  module_manager.cpp  module_manager.h  scopegrid.cpp  scopegrid.h  signal_generator.cpp  signal_generator.h
src/util/: ringbuffer.h
src/widgets/: generator_widget.cpp  generator_widget.h  imgui_plot.cpp  imgui_plot.h  module.h  module_table.cpp  module_table.h  module_widget.cpp  module_widget.h  scopegrid.cpp  scopegrid.h  widget.h
